--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "/Users/dario/Repos/my-repos/next-on-pages/packages/next-on-pages",
+    "@cloudflare/next-on-pages": "https://prerelease-registry.devprod.cloudflare.dev/next-on-pages/runs/6532626277/npm-package-next-on-pages-486",
     "vercel": "^32.4.1",
     "wrangler":"^3.11.0",
     "@cloudflare/workers-types": "^4.20231002.0"
